--- a/index.html
+++ b/index.html
@@ -55,5 +55,9 @@
         <button id="go-button">GO</button>
       </div>
     </form>
+    <div class="info-msg">
+      <h2></h2>
+      <p></p>
+    </div>
   </body>
 </html>
