slight layout & logic tweak

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <form>
       <div class="container">
         <div class="heading heading-day">Day</div>
-        <div class="heading heading-min">Min</div>
+        <div class="heading heading-min">Card</div>
         <div class="heading heading-result">Result</div>
 
         <div class="day">Mon</div>
@@ -49,10 +49,11 @@
           <input type="number" id="sat-min" required />
         </div>
         <div class="result sat-result"></div>
+        <button id="go-button">GO</button>
         <div class="target">
           <input type="number" id="target" placeholder="TARGET" required />
         </div>
-        <button id="go-button">GO</button>
+        <div class="total-result result"></div>
       </div>
     </form>
     <div class="info-msg">
