changed how numbers are derived

--- a/index.html
+++ b/index.html
@@ -15,37 +15,37 @@
         <div class="heading heading-result">Result</div>
 
         <div class="day">Mon</div>
-        <div class="range mon-min">
+        <div class="day-input mon-min">
           <input type="number" id="mon-min" required />
         </div>
         <div class="result mon-result"></div>
 
         <div class="day">Tue</div>
-        <div class="range tue-min">
+        <div class="day-input tue-min">
           <input type="number" id="tue-min" required />
         </div>
         <div class="result tue-result"></div>
 
         <div class="day">Wed</div>
-        <div class="range wed-min">
+        <div class="day-input wed-min">
           <input type="number" id="wed-min" required />
         </div>
         <div class="result wed-result"></div>
 
         <div class="day">Thu</div>
-        <div class="range thu-min">
+        <div class="day-input thu-min">
           <input type="number" id="thu-min" required />
         </div>
         <div class="result thu-result"></div>
 
         <div class="day">Fri</div>
-        <div class="range fri-min">
+        <div class="day-input fri-min">
           <input type="number" id="fri-min" required />
         </div>
         <div class="result fri-result"></div>
 
         <div class="day">Sat</div>
-        <div class="range sat-min">
+        <div class="day-input sat-min">
           <input type="number" id="sat-min" required />
         </div>
         <div class="result sat-result"></div>
